--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@ body {
   margin: 0px;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  background-color: #D3D3D3;
+  background-color: #FFFFFF;
 }
